# Babelfish

./: CLAUDE.md  README.md  REFLECTIONS.md  babelfish_mcp.py  chess_coach_mcp.py  chess_utils.py  main.py  mcp_tool_router.py  mcp_tools.py  openrouter_cli.py  pyproject.toml  start_web.py  web_interface.py
babelfish/: __init__.py  chess_analyzer.py  mcp_server.py
templates/: index.html
tests/: demo_kc7_analysis.py  test_board_visualization.py  test_passed_pawns.py  test_pawn_majorities.py  test_position.py  test_pv_kc7.py  test_stockfish_pv.py
